
noinst_PROGRAMS=snam
snam_SOURCES = main.cc hud.cc hud.h densitytimeline.h densitytimeline.cc \
               scene.cc scene_loadgraph.cc scene.h \
               layout.cc layout.h \
               link.cc link.h node.cc node.h message.cc message.h\
               mouse.h mouse.cc keyboard.cc keyboard.h \ 
               consts.h consts.cc vector3.cc vector3.h \
               widget.cc widget.h
